# UAV-Real-time-Object-Tracking-System

./: README.md
follow/: .gitignore  .gitmodules  README.md  huy.txt  install_opencv_4_10_pi5.sh  object_lock_tracker_node.py  setup_web.sh  t-launch-1.0 libcamerasrc ! videoconvert ! autovideosink
follow/camear_calibration/: camera.yaml
follow/deploy/: setup_autostart_follow.sh
follow/install/: local_setup.sh  setup.sh
follow/install/ai_follow/lib/ai_follow/: gimbal_pid_node  object_lock_tracker_node  test1_node
follow/install/ai_follow/share/ai_follow/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
follow/install/aruco_tracker/share/aruco_tracker/: package.sh  package.xml
follow/install/cv_bridge/share/cv_bridge/: package.sh
follow/services/: gimbal-controller.service  rtsp-camera.service  run_ai_follow.sh  run_gimbal_controller.sh  run_kalman_filter.sh  run_rtsp_cam.sh  run_web.sh  target-pose-fusion.service  yolo-follow.service
follow/src/ai_follow/: package.xml  setup.cfg  setup.py
follow/src/ai_follow/config/: object_lock_tracker.yaml
follow/src/gimbal_controller/: setup.py
follow/src/gimbal_controller/gimbal_controller/: siyi_gimbal_node.py
follow/src/rtsp_camera/: CMakeLists.txt  RtspCamera.cpp  RtspCamera.hpp
follow/src/target_pose_fusion/: CMakeLists.txt  KalmanFilter.cpp  KalmanFilter.hpp  params_kalman.yaml
follow/src/utils/: creater_maker.py  rtsp_debug_view.py
follow/web/backend/: app.py  ros_bridge.py
follow/web/frontend/: index.html
follow/web_env/: pyvenv.cfg
(+82 files in other folders)
